tests/neg/ghost-lazy-val.scala
object Test {
  ghost lazy val i: Int = 1 // error
}
